samples/_failures_safe/1761652176_2e79fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d379fdec.c: In function ‘main’:
./samples/SAFE/__tmp_d379fdec.c:162:5: error: expected declaration or statement at end of input
  162 |     }
      |     ^
